# EVT-Arduino

./: .gitignore  BAMOCAR_TUNED.urf  README.md
DoorColor/: DoorColor.ino
DoorWebServer/: DoorWebServer.ino
EVTScooter/: EVTScooter.ino
EVT_EVenger/EVT_EVenger.ino/: EVT_EVenger.ino.ino
EVT_EVenger_test/EVT_EVenger_test.ino/: EVT_EVenger_test.ino.ino
Mech_Power_Calc/: platformio.ini
Mech_Power_Calc/src/: main.cpp
OmniLogger_Firmware/src/: main.cpp
SerialWindowPOT/: SerialWindowPOT.ino  SerialWindow_AVR_ETHERNET_atmega328p.hex
SerialWindowPOTNew/: SerialWindowPOTNew.ino
TeensyKartRC/: TeensyKartRC.code-workspace  platformio.ini
TeensyKartRC/lib/SpektrumSatRx-master/: SatelliteReceiver.cpp  SatelliteReceiver.h  keywords.txt
TeensyKartRC/lib/SpektrumSatRx-master/examples/SerialChannelMonitor/: SerialChannelMonitor.ino
TeensyKartRC/lib/rosTalonSRX-master/: .gitignore  .ycm_extra_conf.py  README.md  finddata
TeensyKartRC/lib/rosTalonSRX-master/CANBridgeTest/: CANRecvTest.cpp  CANSendTest.cpp  checkSerialGoodness.cpp  spewSerialBytes.cpp
TeensyKartRC/lib/rosTalonSRX-master/arduino_stuff/: .ycm_extra_conf.py
TeensyKartRC/lib/rosTalonSRX-master/arduino_stuff/CANBridge/: .ycm_extra_conf.py  CANBridge.ino  crc8-table.h  crc8_table.c  crc8_table.h  mcp_can.h
TeensyKartRC/lib/rosTalonSRX-master/arduino_stuff/echoserial/: echoserial.ino
TeensyKartRC/lib/rosTalonSRX-master/arduino_stuff/readCANbus/: readCANbus.ino
TeensyKartRC/lib/rosTalonSRX-master/src/ardu_can_bridge/: .ycm_extra_conf.py  CMakeLists.txt  package.xml
TeensyKartRC/lib/rosTalonSRX-master/src/ardu_can_bridge/include/: crc8_table.h
TeensyKartRC/lib/rosTalonSRX-master/src/ardu_can_bridge/src/: ardu_can_bridge_node.cpp
TeensyKartRC/lib/rosTalonSRX-master/src/ardu_can_bridge/srv/: CANRecv.srv
TeensyKartRC/lib/rosTalonSRX-master/src/ardu_can_bridge_msgs/: CMakeLists.txt  package.xml
TeensyKartRC/lib/rosTalonSRX-master/src/ardu_can_bridge_msgs/msg/: CANData.msg  CANSend.msg
TeensyKartRC/lib/rosTalonSRX-master/src/can_pdp/: CMakeLists.txt  package.xml
TeensyKartRC/lib/rosTalonSRX-master/src/can_pdp/src/: CANSessionMux.cpp  PDP.cpp  PDP_node.cpp
TeensyKartRC/lib/rosTalonSRX-master/src/can_pdp_msgs/: CMakeLists.txt  package.xml
TeensyKartRC/lib/rosTalonSRX-master/src/can_pdp_msgs/msg/: PDP.msg
TeensyKartRC/lib/rosTalonSRX-master/src/can_talon_srx/: CMakeLists.txt  package.xml
TeensyKartRC/lib/rosTalonSRX-master/src/can_talon_srx/include/HAL/: CanTalonSRX.h  signals
TeensyKartRC/lib/rosTalonSRX-master/src/can_talon_srx/src/: CanTalonSRX.cpp  CtreCanNode.cpp  test.cpp
TeensyKartRC/lib/rosTalonSRX-master/src/can_talon_srx/srv/: ConfigSetParameter.srv  GetParameter.srv
TeensyKartRC/lib/rosTalonSRX-master/src/can_talon_srx_msgs/: CMakeLists.txt  package.xml
TeensyKartRC/lib/rosTalonSRX-master/src/can_talon_srx_msgs/msg/: ConfigSetParameter.msg  Set.msg  SetFeedbackDeviceSelect.msg  SetModeSelect.msg  SetModeSelectAndDemand.msg  SetProfileSlotSelect.msg  Status.msg
TeensyKartRC/lib/rosTalonSRX-master/src/can_talon_srx_test/: CMakeLists.txt  package.xml
TeensyKartRC/lib/rosTalonSRX-master/src/can_talon_srx_test/launch/: joytalontest.launch  (+1 more)
TeensyKartRC/lib/ros_lib/: ArduinoHardware.h
TeensyKartRC/lib/ros_lib/cartographer_ros_msgs/: BagfileProgress.h  HistogramBucket.h  LandmarkEntry.h  LandmarkList.h  Metric.h  MetricFamily.h  MetricLabel.h  SensorTopics.h  StartTrajectory.h  StatusCode.h  StatusResponse.h  SubmapEntry.h  SubmapList.h  SubmapTexture.h  TrajectoryOptions.h  TrajectoryStates.h
TeensyKartRC/lib/ros_lib/costmap_converter/: ObstacleArrayMsg.h  ObstacleMsg.h
TeensyKartRC/lib/ros_lib/fsd_common_msgs/: CarState.h  CarStateDt.h  Cone.h  ConeDetections.h  ControlCommand.h  Map.h  Mission.h
TeensyKartRC/lib/ros_lib/fssim_common/: CarInfo.h  Cmd.h  Mission.h  ResState.h  SimHealth.h  State.h  TopicState.h  TopicsHealth.h  Track.h  Vector3Ext.h  WheelSpeeds.h
TeensyKartRC/lib/ros_lib/jackal_msgs/: Drive.h  DriveFeedback.h  Feedback.h  Status.h
TeensyKartRC/lib/ros_lib/nav2d_msgs/: LocalizedScan.h  RobotPose.h
TeensyKartRC/lib/ros_lib/nav2d_navigator/: ExploreAction.h  ExploreActionFeedback.h  ExploreActionGoal.h  ExploreActionResult.h  ExploreFeedback.h  ExploreGoal.h  ExploreResult.h  GetFirstMapAction.h  GetFirstMapActionFeedback.h  GetFirstMapActionGoal.h  GetFirstMapActionResult.h  GetFirstMapFeedback.h  GetFirstMapGoal.h  GetFirstMapResult.h  LocalizeAction.h  LocalizeActionFeedback.h  LocalizeActionGoal.h  LocalizeActionResult.h  LocalizeFeedback.h  LocalizeGoal.h  LocalizeResult.h  MoveToPosition2DAction.h  MoveToPosition2DActionFeedback.h  MoveToPosition2DActionGoal.h  MoveToPosition2DActionResult.h  MoveToPosition2DFeedback.h  MoveToPosition2DGoal.h  MoveToPosition2DResult.h
TeensyKartRC/lib/ros_lib/nav2d_operator/: cmd.h
TeensyKartRC/lib/ros_lib/nav_2d_msgs/: NavGridInfo.h  NavGridOfChars.h  NavGridOfCharsUpdate.h  NavGridOfDoubles.h  NavGridOfDoublesUpdate.h  Path2D.h  Point2D.h  Polygon2D.h  Polygon2DStamped.h  Pose2D32.h  Pose2DStamped.h  SwitchPlugin.h  Twist2D.h  Twist2D32.h  Twist2DStamped.h  UIntBounds.h
TeensyKartRC/lib/ros_lib/people_msgs/: People.h  Person.h  PersonStamped.h  PositionMeasurement.h  PositionMeasurementArray.h
TeensyKartRC/lib/ros_lib/sbpl_lattice_planner/: SBPLLatticePlannerStats.h
TeensyKartRC/lib/ros_lib/teb_local_planner/: FeedbackMsg.h
TeensyKartRC/lib/ros_lib/twist_mux_msgs/: JoyPriorityAction.h  JoyPriorityActionFeedback.h  JoyPriorityActionGoal.h  JoyPriorityActionResult.h  JoyTurboAction.h  JoyTurboActionFeedback.h  JoyTurboActionGoal.h  JoyTurboActionResult.h
TeensyKartRC/lib/ros_lib/velodyne_msgs/: VelodynePacket.h  VelodyneScan.h
TeensyKartRC/src/: main.cpp
TestProjectTeensy/: .gitignore  platformio.ini
TestProjectTeensy/src/: main.ino
VCU_Firmware/: .clang_complete  .gcc-flags.json  CMakeLists.txt  platformio.ini
VCU_Firmware/include/: MCP2515.h  VCU.h
VCU_Firmware/src/: CanMessages.cpp  MCP2515.cpp  VCU.cpp  VCUTasks.cpp  evt_arduino.code-workspace  main.cpp
blink/: blink.ino
(+3 files in other folders)
