cmake_minimum_required(VERSION 3.14)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_TOOLCHAIN_FILE ${CMAKE_SOURCE_DIR}/cmake/ArduinoToolchain.cmake)
set(PROJECT_NAME VCU_Firmware)
project(${PROJECT_NAME})
set(${CMAKE_PROJECT_NAME}_SKETCH src/main.cpp)
add_library (VCU_IMPL STATIC src/VCU.cpp)
add_library (VCU_TASK_IMPL STATIC src/VCUTasks.cpp)
add_executable(${PROJECT_NAME} src/main.cpp)
include_directories(include)
include_directories(src)
include_directories("C:/Program Files (x86)/Arduino/hardware/arduino/avr/cores/*")